--- a/BlogViewer/Storyboard.storyboard
+++ b/BlogViewer/Storyboard.storyboard
@@ -409,10 +409,10 @@
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="283" translatesAutoresizingMaskIntoConstraints="NO" id="XZC-DZ-2iZ">
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="283" id="sSH-5s-9T2"/>
+                                                <constraint firstAttribute="width" constant="283" id="qpl-Qe-2hp"/>
                                                 <constraint firstAttribute="height" constant="99" id="u0E-Cj-vNh"/>
                                             </constraints>
-                                            <string key="text">ねこログは、ペットやかわいい動物ブログが多い、gooブログの中で、“ねこ”に関するブログの新着情報が閲覧できるアプリです。
+                                            <string key="text">「ねこログ」は、gooブログのねこブログを集めたリーダーアプリです。新着順や画像覧でかわいいねこを閲覧できます。
 
 厳選したねこブログであなたに癒しを与えます+｡:.ﾟヽ(*´∀`)ﾉﾟ.:｡+ﾟ</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -1036,15 +1036,128 @@
     </scenes>
     <resources>
         <image name="blog_list.png" width="24" height="22"/>
-        <image name="favorite.png" width="32" height="32"/>
+        <image name="favorite.png" width="30" height="30"/>
         <image name="home.png" width="24" height="22"/>
         <image name="icon_go_back.png" width="27" height="27"/>
         <image name="icon_go_foward.png" width="27" height="27"/>
         <image name="images.png" width="23" height="18"/>
         <image name="nekoicon.png" width="16" height="16"/>
         <image name="setting.png" width="24" height="22"/>
-        <image name="star.png" width="32" height="32"/>
+        <image name="star.png" width="30" height="30"/>
     </resources>
+    <classes>
+        <class className="AppinfoCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AppinfoCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_appinfo" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ApptitleCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ApptitleCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_appname" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_copyright" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_icon" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="_version" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BlogCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_blogtitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_thumbnail" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="_updated" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BlogItemsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogItemsViewController.h"/>
+        </class>
+        <class className="BlogsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="pressRefreshButton:"/>
+            </relationships>
+        </class>
+        <class className="FavoriteViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FavoriteViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_editbutton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="ImageCell" superclassName="UICollectionViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageview" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="ImagesViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImagesViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="pressRefreshButton:"/>
+            </relationships>
+        </class>
+        <class className="ItemCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_blogtitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_itemtitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_thumbnail" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="_updated" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ItemsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="pressRefreshButton:"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OtherViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OtherViewController.h"/>
+        </class>
+        <class className="ScrollCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_blogLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_dateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="_itemLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ScrollViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="_scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="_tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="WebViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="pressFavoriteButton:"/>
+                <relationship kind="action" name="showActionsheet:"/>
+                <relationship kind="outlet" name="_favoritebutton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="_gobackbutton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="_goforwardbutton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="_indicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="_refreshbutton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="_webview" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
